--- a/sijpinner/css/sijpinner.css
+++ b/sijpinner/css/sijpinner.css
@@ -1,3 +1,12 @@
+.sijpinner-container{
+  display:inline-block;
+  vertical-align:top;
+}
+
+.sijpinner-container input{
+  width:64px;
+}
+
 .sijpinner-arrow{
   cursor: pointer;
 }
